labeling k-means vertex position

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
 Current Version
-+) New: 'Edit -> Transform Extra -> Directory: Automatic Mesh Alignment: for each mesh file in directory
++) New: 'Labeling -> Label K-Means: Vertex Position: Label vertices per cluster those are calculated by the K-Means algorithm. 
+         The initial centroids are the selected vertices.
++) New: 'Edit -> Transform Extra -> Directory: Automatic Mesh Alignment': for each mesh file in directory
         do the 'Automatic Mesh Alignment' and save the transformed mesh with a file name suffix.
-+) New: 'File -> Export Image Stack -> Directory: Spherical Stack Lightsource Orbiting: for each mesh file in directory 
++) New: 'File -> Export Image Stack -> Directory': Spherical Stack Lightsource Orbiting: for each mesh file in directory 
          do Spherical Stack Lightsource Orbiting and save the images in a folder named after the file name.
 +) New: 'Functions -> Feature Element Min Signed' showing more details than the unsigned function.
 +) New: 'Functions -> Feature Element Max Signed' showing more details than the unsigned function.
