--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Current Version
++) New: 'CLI: gigamesh-info -> New Option: --quick (-q) Suppress detection of self-intersections (computationally intensive)"  
 +) New: 'Labeling -> Label K-Means: Vertex Position: Label vertices per cluster those are calculated by the K-Means algorithm. 
          The initial centroids are the selected vertices.
 +) New: 'Edit -> Transform Extra -> Directory: Automatic Mesh Alignment': for each mesh file in directory
